--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "lint": "eslint --no-error-on-unmatched-pattern \"src/**/*.ts\" \"tests/**/*.ts\"",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
     "build": "tsc -p tsconfig.json"
@@ -20,7 +20,7 @@
     "@types/node": "^22.4.1",
     "prisma": "^5.18.0",
     "tsx": "^4.16.0",
-    "typescript": "^5.5.4",
+    "typescript": "5.5.4",
     "vitest": "^2.0.5"
   }
 }
