--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@fastify/cors": "^8.5.0",
     "argon2": "^0.41.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
